# mytest

./: .gitmodules  CMakeLists.txt  main.cpp  pushbutton.cpp  simple_menu.cpp  simple_menu.h
qt_dmg/: CMakeLists.txt  absolute.cpp  addbuttondialog.cpp  addbuttondialog.h  addtabdialog.cpp  addtabdialog.h  cursors.cpp  pushbutton.cpp  quick.cpp  simple_menu.h  skeleton.cpp  skeleton.h
qt_dmg/test/: calculator.cpp  cursors.cpp  pushbutton.cpp  simple_menu.cpp
ssh/: CMakeLists.txt  argumentscollector.cpp  console.cpp  console.h  main.cpp  shell.cpp  shell.h
ssh/QSsh/include/ssh/: sshconnection.h
